Check if a parent is really available, otherwise we get a null pointer issue when accessing extraData()

BUG:186255

svn path=/trunk/extragear/graphics/digikam/; revision=947262